apps/frontend/src/styles/shared.scss
/* ... */
.overflow-x-ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.ps > .ps__rail-y {
  transition: background-color $theme-transition ease;
}

.ps.ps--active-y > .ps__rail-y {
  opacity: 1;
  z-index: 99;
  width: 0.5rem;
  background-color: transparent;
  & .ps__thumb-y {
    width: 0.25rem;
    background-color: #DFB316;
  }
}

.ps.ps--active-x > .ps__rail-x {
  display: none !important;
}

.modal.modal-md,
.modal.modal-lg {
  & .modal-dialog {
    max-width: 450px;
  }
}

.modal.modal-xl,
.modal.modal-xxl {
  & .modal-dialog {
    max-width: 60%;
  }
}

label.form-label {
  margin-bottom: 0;
}

.form-check {
  & .form-check-input {
    width: 18px;
    height: 18px;
  }
  & .form-check-label {
    margin: 3px 0 0 3px;
  }
}

.input-group {
  margin-top: 0.25rem;
  box-shadow: 0px 1px 2px 0px rgba($dark-blue, 0.05);
  & .form-control {
    padding: 0.675rem;
    transition: background-color $theme-transition ease;
    font-size: 14px;
    box-shadow: none;
    &.form-control-left {
      cursor: pointer;
      border-right: 0;
      padding-right: 0;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-top-left-radius: 0.375rem !important;
      border-bottom-left-radius: 0.375rem !important;
    }
    &.form-control-right {
      border-left: 0;
      padding-left: 0;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-top-right-radius: 0.375rem !important;
      border-bottom-right-radius: 0.375rem !important;
    }
    &.form-control-middle {
      transition: background-color $theme-transition ease;
      border-left: 0;
      padding-left: 0;
      border-right: 0;
      padding-right: 0;
    }
    &.password-input-ctrl {
      font-size: 175%;
      padding-top: 2px;
      padding-bottom: 4px;
    }
    &:focus {
      box-shadow: 0px 1px 2px 0px rgba($dark-blue, 0.05);
    }
  }
  & .form-control-addon {
    padding: 0.675rem;
    transition: background-color $theme-transition ease;
    &.form-control-addon-disabled {
      background-color: $gray-200;
    }
    &:focus {
      border-color: transparent;
      box-shadow: 0px 1px 2px 0px rgba($dark-blue, 0.05);
    }
    &.form-control-addon-right {
      cursor: pointer;
      border-left: 0;
      padding-top: 0;
      padding-bottom: 0;
      &.input-group-text {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        border-top-right-radius: 0.375rem !important;
        border-bottom-right-radius: 0.375rem !important;
      }
      &:hover {
        svg path {
          stroke: color.adjust($primary, $lightness: -10%);
          &.svg-add {
            stroke: none;
            fill: color.adjust($primary, $lightness: -10%);
          }
        }
      }
      & .btn-addon-close {
        cursor: pointer;
        & svg {
          width: 0.675rem;
          height: 0.675rem;
        }
        &:hover {
          & path {
            fill: color.adjust($primary, $lightness: -10%);
          }
        }
      }
    }
    &.form-control-addon-left {
      border-right: 0;
      &.input-group-text {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
        border-top-left-radius: 0.375rem !important;
        border-bottom-left-radius: 0.375rem !important;
      }
    }
  }
  &.invalid {
    & .form-control {
      border-color: $danger;
      &:focus {
        border-color: $danger;
        box-shadow: 0px 1px 2px 0px rgba($danger, 0.05);
      }
    }
    & .form-control-addon {
      border-color: $danger;
      &:focus {
        border-color: $danger;
        box-shadow: none;
      }
    }
  }
}

.qr-container {
  position: relative;
  width: 220px;
  & .qr-cln-logo {
    position: absolute;
    top: 43%;
    left: 43%;
    padding: 0;
    border-radius: 50%;
    width: 2.5rem;
    height: 2.5rem;
    border: 3px solid $white;
  }
}

.alert {
  word-break: break-all;
}

.message {
  display: flex;
  align-items: center;
  min-height: 1.5rem;
  height: 1.5rem;
  font-size: 12px;
  font-weight: 600;
  word-break: break-all;
  margin-bottom: 0.5rem;
  &.invalid {
    color: $danger;
  }
  &.pending {
    color: $warning;
  }
  &.success {
    color: $success;
  }
}

.list-group {
  position: relative;
  overflow: hidden;
  & .list-group-item {
    border: none;
  }
}

.card.wallet-card {
  border-top-left-radius: $border-radius;
  border-top-right-radius: $border-radius;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border: none;
}

.card.overview-balance-card {
  padding-left: 0.5rem !important;
  background-color: $primary;
  flex-grow: 1 !important;
}

.information-svg {
  margin-right: 0.25rem;
  min-width: 17px;
  &.svg-sm {
    display: block;
    height: 0.75rem;
  }
}

.no-btctx-dark {
  transition: all $theme-transition ease;
  height: 11.5rem;
  & .cls-1 {
    fill: url(#lgbtcdark);
  }
  & .cls-2 {
    clip-path: url(#clippath);
  }
  & .cls-3,
  & .cls-4 {
    fill: #1d2127;
  }
  & .cls-4,
  & .cls-5 {
    stroke: #b3b3b3;
    stroke-miterlimit: 10;
    stroke-width: 2px;
  }
  & .cls-6 {
    clip-path: url(#clippath-1);
  }
  & .cls-7 {
    clip-path: url(#clippath-4);
  }
  & .cls-8 {
    clip-path: url(#clippath-3);
  }
  & .cls-9 {
    clip-path: url(#clippath-2);
  }
  & .cls-10 {
    fill: #e0ba2d;
    opacity: 0.2;
  }
  & .cls-5 {
    fill: none;
  }
  & .cls-11 {
    isolation: isolate;
  }
}
/* ... */

